# personal-website

./: .gitignore  Dockerfile  Dockerfile.cuda  Dockerfile.mac  Dockerfile.mps  Makefile  README.md  app.py  eval.py  eval_rag.ipynb  feedback.txt  local_hf.py  prepare_database.py  prepare_db.py  pyproject.toml  rag_utils.py  requirements.txt  streamlit_app.py  taide_chat.py
Desktop/my-portfolio/: package-lock.json  package.json
Desktop/my-portfolio/.next/: trace
Desktop/my-portfolio/app/: page.tsx  page_template.tsx
chroma_db/: chroma.sqlite3
data/: data_cleaning.py  scraper.py
data/texts/: advantages.txt  alumni.txt  brief.txt  position.txt
data/wesley/: wesley.json
dataset/: DATASET.md  README.md  datacleaning.ipynb
deprecated/: streamlit_app_deprecated.py
logs/: 2024-10-21_10:24:05-log.json  2024-11-05_11:01:40-log.json  2024-11-05_11:10:51-log.json  2024-11-05_11:17:43-log.json  2024-11-05_11:31:15-log.json  2024-11-05_11:37:19-log.json  2024-11-05_11:50:52-log.json  2024-11-05_11:53:12-log.json  2024-11-05_12:11:47-log.json  2024-11-18_12:29:09-log.json  2024-11-18_12:31:03-log.json  2024-11-19_00:37:38-log.json
rag-prototype-cody-debbie-andre/: app.py  example_qa.md  readme.md  requirements.txt
rag-prototype-cody-debbie-andre/Upload/: multilingual-e5-base.ipynb  text-embedding-3-large.ipynb  text-embedding-3-small.ipynb
rag-prototype-cody-debbie-andre/textdata/: text.txt
rag-prototype-cody-debbie-andre/upload/: multilingual-e5-base.ipynb  text-embedding-3-large.ipynb  text-embedding-3-small.ipynb
utils/: check_cuda.ipynb
(+12 files in other folders)
