[tool.poetry]
name = "rag-prototype"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
streamlit = "^1.39.0"
streamlit-feedback = "^0.1.3"
langchain = "^0.3.4"
langchain-pinecone = "^0.2.0"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
langchain-huggingface = "^0.1.0"
python-dotenv = "^1.0.1"
ragas = "^0.2.1"
datasets = "^3.0.1"
torch = "^2.5.0"
pandas = "^2.2.3"
accelerate = "^1.0.1"
chromadb = "^0.5.15"
langchain-chroma = "^0.1.4"
einops = "^0.8.0"
sentence-transformers = "^3.2.1"
pypdf = "^5.0.1"
protobuf = "3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
